--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -65,8 +65,14 @@ form input[type=text] {
     background-color: #eee;
 }
 
-.chat .username {
-    font-weight: 800;
+.username {
+    font-weight: bold;
+    color: black;
+}
+
+.username:hover {
+    color: grey;
+    text-decoration: none;
 }
 
 .chat:hover {
@@ -85,7 +91,5 @@ form input[type=text] {
 }
 
 .friend {
-    color: #fff;
-    background-color: #0090da;
+    color: #337ab7;
 }
-
